Added a lot of information in related

--- a/graph.tex
+++ b/graph.tex
@@ -1,11 +1,11 @@
-\documentclass[11pt]{article}
+\documentclass[10pt,conference]{IEEEtran}
 
-\title{Using similiraty graphs to cluster scientific articles}
+\title{Using similarity graphs to cluster scientific articles}
 \author{Jonas Arnfred}
 
 \usepackage{natbib}
 \usepackage{hyperref}
-\usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage{amsmath}
 
 \begin{document}
