--- a/graph.bib
+++ b/graph.bib
@@ -8,6 +8,7 @@
   year={2004},
   publisher={Springer}
 }
+
 @article{schaeffer2007,
   title={Graph clustering},
   author={Schaeffer, S.E.},
@@ -18,6 +19,7 @@
   year={2007},
   publisher={Elsevier}
 }
+
 @article{girvan2002,
   title={Community structure in social and biological networks},
   author={Girvan, M. and Newman, M.E.J.},
@@ -28,6 +30,7 @@
   year={2002},
   publisher={National Acad Sciences}
 }
+
 @article{von2007,
   title={A tutorial on spectral clustering},
   author={Von Luxburg, U.},
@@ -38,6 +41,7 @@
   year={2007},
   publisher={Springer}
 }
+
 @article{ng2002,
   title={On spectral clustering: Analysis and an algorithm},
   author={Ng, A.Y. and Jordan, M.I. and Weiss, Y. and others},
@@ -47,6 +51,7 @@
   year={2002},
   publisher={MIT; 1998}
 }
+
 @article{rosvall2008,
   title={Maps of random walks on complex networks reveal community structure},
   author={Rosvall, M. and Bergstrom, C.T.},
@@ -57,6 +62,7 @@
   year={2008},
   publisher={National Acad Sciences}
 }
+
 @article{fortunato2010,
   title={Community detection in graphs},
   author={Fortunato, S.},
@@ -67,6 +73,7 @@
   year={2010},
   publisher={Elsevier}
 }
+
 @article{lancichinetti2008,
   title={Benchmark graphs for testing community detection algorithms},
   author={Lancichinetti, A. and Fortunato, S. and Radicchi, F.},
@@ -77,6 +84,18 @@
   year={2008},
   publisher={APS}
 }
+
+@article{lancichinetti2009,
+  title={Community detection algorithms: a comparative analysis},
+  author={Lancichinetti, A. and Fortunato, S.},
+  journal={Physical Review E},
+  volume={80},
+  number={5},
+  pages={056117},
+  year={2009},
+  publisher={APS}
+}
+
 @article{blondel2008,
   title={Fast unfolding of communities in large networks},
   author={Blondel, V.D. and Guillaume, J.L. and Lambiotte, R. and Lefebvre, E.},
@@ -87,6 +106,7 @@
   year={2008},
   publisher={IOP Publishing}
 }
+
 @article{leicht2008,
   title={Community structure in directed networks},
   author={Leicht, E.A. and Newman, M.E.J.},
@@ -97,6 +117,7 @@
   year={2008},
   publisher={APS}
 }
+
 @article{aldecoa2011,
   title={Deciphering network community structure by surprise},
   author={Aldecoa, R. and Mar{\'\i}n, I.},
@@ -106,4 +127,23 @@
   pages={e24195},
   year={2011},
   publisher={Public Library of Science}
+}
+
+@article{ronhovde2009,
+  title={Multiresolution community detection for megascale networks by information-based replica correlations},
+  author={Ronhovde, P. and Nussinov, Z.},
+  journal={Physical Review E},
+  volume={80},
+  number={1},
+  pages={016109},
+  year={2009},
+  publisher={APS}
+}
+
+@book{golub1996,
+  title={Matrix computations},
+  author={Golub, G.H. and Van Loan, C.F.},
+  volume={3},
+  year={1996},
+  publisher={Johns Hopkins University Press}
 }
