--- a/graph.bib
+++ b/graph.bib
@@ -147,3 +147,43 @@
   year={1996},
   publisher={Johns Hopkins University Press}
 }
+
+@article{aldecoa2010,
+  title={Jerarca: Efficient analysis of complex networks using hierarchical clustering},
+  author={Aldecoa, R. and Mar{\'\i}n, I.},
+  journal={PloS one},
+  volume={5},
+  number={7},
+  pages={e11585},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
+@article{arnau2005,
+  title={Iterative cluster analysis of protein interaction data},
+  author={Arnau, V. and Mars, S. and Mar{\'\i}n, I.},
+  journal={Bioinformatics},
+  volume={21},
+  number={3},
+  pages={364--378},
+  year={2005},
+  publisher={Oxford Univ Press}
+}
+
+@article{zachary1977,
+  title={An information flow model for conflict and fission in small groups},
+  author={Zachary, W.W.},
+  journal={Journal of anthropological research},
+  pages={452--473},
+  year={1977},
+  publisher={JSTOR}
+}
+
+@inproceedings{brandes2007,
+  title={On finding graph clusterings with maximum modularity},
+  author={Brandes, U. and Delling, D. and Gaertler, M. and G{\"o}rke, R. and Hoefer, M. and Nikoloski, Z. and Wagner, D.},
+  booktitle={Graph-Theoretic Concepts in Computer Science},
+  pages={121--132},
+  year={2007},
+  organization={Springer}
+}
