--- a/graph.tex
+++ b/graph.tex
@@ -1,12 +1,16 @@
 \documentclass[10pt,conference]{IEEEtran}
 
-\title{Using similarity graphs to cluster scientific articles}
-\author{Jonas Arnfred}
+\title{Clustering scientific articles}
+\author{Jonas Arnfred, \emph{School of Computer and Communication 
+Sciences, EPFL}\\Email: jonas@ifany}
 
 \usepackage{natbib}
 \usepackage{hyperref}
 \usepackage{amsfonts}
 \usepackage{amsmath}
+\usepackage{caption}
+\usepackage{footnote}
+\captionsetup{belowskip=8pt,aboveskip=4pt}
 
 \begin{document}
 
@@ -17,8 +21,6 @@
 \input{related}
 
 \input{implementation}
-
-\input{discussion}
 
 \bibliographystyle{unsrtnat}
 \bibliography{graph}
