--- a/related.tex
+++ b/related.tex
@@ -2,14 +2,16 @@
 
 Over the last 40 years a large variety of algorithms have been invented 
 to cluster graphs. Most of these methods were based on different 
-measures of optimal clustering all of which were usually np-hard to 
-derive optimal solutions for. The field has seen a boost in recent years 
-due to the increased demands for handling large data that are usually 
-neatly abstracted as graphs\cite[p. 2]{fortunato2010}. Examples include 
-social networks and the world wide web.
+measures of an optimal clustering all of which were usually np-hard to 
+derive optimal solutions for. This led to various algorithms attacking 
+relaxed versions of these problems with different amount of success.  
+The field has seen a boost in recent years due to the increased demands 
+for handling large data that are usually neatly abstracted as graphs 
+\cite[p.  2]{fortunato2010}.  Examples include social networks and the 
+world wide web.
 
 In this paper I don't intend to do a thorough review of the field, 
-something which many much better abled people have already done before 
+something which many better abled people have already done before 
 me\footnote{Examples include \cite{newman2004}, \cite{schaeffer2007} and 
 \cite{fortunato2010}}. Instead I have tried to pick out a few distinct 
 algorithms that are good enough that each could have been a candidate 
@@ -21,26 +23,111 @@ for a clustering algorithm used for grouping the scientific articles.
 % lancichinetti2008 : comparison
 % newman2005 : short and old overview
 
-\subsection{Introduction of related work} % delete this header later
-
 \subsection{How to measure clustering}
 
-\subsection{Minimum-cut clustering}
-% newman2005 and probably von2007
+The central difficulty when proposing a new clustering algorithm is to 
+measure how it compares with other algorithms. Since there is no agreed 
+upon definition on what makes a good cluster, there is naturally no 
+definitive candidate for measuring the ``goodness'' of a cluster.  
+Historically there has been several different approaches.  
+\cite{zachary1977} did a study on the relationships between members of a 
+karate club which eventually split into two factions which has since 
+then been a benchmark for clustering algorithms. If an algorithm on the 
+basis of the social graph can accurately predict the two factions in the 
+split, then it has been judged as useful\footnote{See for example 
+\cite{girvan2002} and \cite{lancichinetti2009}}.
 
-\subsection{Girvan–Newman clustering}
+Fortunately better metrics have been proposed since. One of the most 
+used has been the measure of community proposed by \cite{girvan2002} and 
+defined as:
+\begin{eqnarray}
+	Q & = & (\mbox{fraction of edges within communities}) \\
+	  & & - (\mbox{expected fraction of such edges}) \\
+	& = & \frac{1}{2m} \sum_{i,j} \left[ A_{ij} - \frac{k_i k_j}{2m} \
+\right] \delta(c_i, c_j)
+\end{eqnarray}
+Where $m=\frac{1}{2} \sum_{ij} A_{ij}$, $k_i = \sum_j A_{ij}$ and 
+$A_{ij}$ is the weight between the edge connecting $i$ and $j$.  
+$\delta(c_i, c_j)$ is the Kroneker Delta which is 1 only if the 
+community assignment of $v_i$, $c_i$ is equal to the community 
+assignment of $v_j$, $c_j$. The community measure has been the de-facto 
+standard but it is not without shortcomings. It has been shown by 
+\cite{brandes2007} that the metric doesn't work well with small 
+communities.
+
+An alternative measure called Surprise was introduced by 
+\cite{arnau2005} and has later been shown to perform better than the 
+community measure in a lot of cases by \cite{aldecoa2011}, although it 
+has yet to be independently adopted verified and adopted by other 
+researchers. The idea behind Surprise is to model the distributions of 
+intra- and inter-community links with a cumulative hypergeometric 
+distribution. It is defined as follows:
+\begin{equation}
+	S = -log \sum_{j=p}^{Min(M,n)} \frac{\binom{M}{j} \
+	\binom{F-M}{m-j}}{\binom{F}{n}}
+\end{equation}
+Here $F$ is the maximum possible number of edges in the graph, that is 
+$F = (n^2-n)/2$, while $M$ is the maximum number of edges within a 
+cluster $A$ of size $k$, that is $M = (k^2-k)/2$. $p$ is the actual 
+number of links found in the community. The authors have not proposed a 
+similar formula for weighted graphs.
+
+An alternative method of testing graph clustering algorithms is to 
+design a series of graphs with known clustering and see how well the 
+algorithm in question predicts these graphs. The most famous of such 
+graphs was introduced by \cite{girvan2002}. They consisted of 128 
+vertices with four clusters of even size. The average degree of each 
+vertix was 16. A parameter $k_{out}$ would designate how many edges a 
+node would have leading to other clusters. With $k_{out} < 8$ a good 
+clustering algorithm should be expected to find the original clustering.  
+However these graphs are a very limited subset of the real graphs that 
+clustering algorithms are supposed to work with. In particular it's 
+small, the communities are of an even size and the nodes have very 
+similar degrees\footnote{As pointed out by \cite{lancichinetti2008}}. 
+These shortcomings lead to misleading benchmark results for algorithms 
+that are not suited to work on for example graphs with clusters of very 
+different sizes.
+
+To improve on these shortcomings, another group of random graphs was 
+introduced in 2009 by \cite{lancichinetti2008}. With the implicit 
+assumption that degree and community size in real graphs are guided by 
+power laws, they device a set of graphs usually denominated as 
+\emph{LFR} graphs where each node is given a degree taken from a power 
+law distribution with exponent $\gamma$ such that the average degree is 
+$k$.  Each node keeps a fraction $1-\mu$ of its edges within its own 
+cluster and the remaining fraction $\mu$ with nodes outside its cluster.  
+The sizes of clusters are also taken from a power law distribution. The 
+random graphs are then constructed by assigning the nodes randomly to 
+clusters as long as each node has less inter-cluster links than the size 
+of the cluster. The graph is then adjusted to make sure the amount of 
+inter-cluster versus intra-cluster links is given according to $\mu$.
+
+The \emph{LFR} graphs are like their predecessors the \emph{GN} graphs a 
+limited benchmark in the sense that they will reward algorithms that are 
+particularly good at clustering graphs that correspond to the particular 
+structure determined by the power distribution of of edges and cluster 
+sizes.
+
+These graphs has later been used by \cite{lancichinetti2009} in a 
+benchmark of 12 clustering algorithms, many of which are mentioned in 
+the following section of this paper. The \emph{LFR} are also used by 
+\cite{aldecoa2010} to show that \emph{Surprise} is better correlated 
+with the true clustering than \emph{Modularity} in a series of tests 
+with various algorithms.
+
+\subsection{Girvan Newman clustering}
 If we look at the problem of clustering a graph as a problem of removing 
 edges until we arrive at a set amount of communities, we need a good 
 measure for what edges should be removed. The Girvan-Newman algorithm 
-proposes that we remove edges based on a measure of ``betweenness'', 
-that is how much a particular edge $e_{ij}$ is situated between 
-clusters. The betweenness of $e_{ij}$ is calculated by counting how many 
-shortest paths between pairs of vertices that run through $e_{ij}$. In 
-case there is ($k > 1$) shortest paths, each path traversing $e_{ij}$ 
-contribues $\frac{1}{k}$ to the count.  If we define $\sigma_{st}$ as 
-the number of shortest paths between vertic $s$ and $t$, and 
-$\sigma_{st}(v)$ as the number of shortest paths between $s$ and $t$ 
-traversing $e_{ij}$ we can write betweenness as
+(in short \emph{GN}) proposes that we remove edges based on a measure of 
+``betweenness'', that is how much a particular edge $e_{ij}$ is situated 
+between clusters. The betweenness of $e_{ij}$ is calculated by counting 
+how many shortest paths between pairs of vertices that run through 
+$e_{ij}$. In case there is ($k > 1$) shortest paths, each path 
+traversing $e_{ij}$ contribues $\frac{1}{k}$ to the count.  If we define 
+$\sigma_{st}$ as the number of shortest paths between vertic $s$ and 
+$t$, and $\sigma_{st}(v)$ as the number of shortest paths between $s$ 
+and $t$ traversing $e_{ij}$ we can write betweenness as
 \begin{equation}
 	C_B(v)= \sum_{s \neq v \neq t \in V} \
 	\frac{\sigma_{st}(v)}{\sigma_{st}}
@@ -49,12 +136,10 @@ Using this measure we can iteratively construct a dendrogram by
 calculating all the shortest paths of the graph, then finding the edge 
 with the highest betweenness and finally remove this edge and repeat. A 
 common way to find the best amount of groupings is to stop removing 
-edges when the highest value measure of community\footnote{This measure 
-	is further explained when reviewing the Louvain method as well as in 
-the chapter on measures of graph quality} is obtained.
-The complexity of this algorthim is $O(n^3)$ in the general case, but it
+edges when the highest value measure of \emph{Community} is obtained.
+The complexity of this algorithm is $O(n^3)$ in the general case, but it
 can be calculated slightly faster when the graph is sparse. The 
-algorithm does perform particularly well on random graphs, but it is 
+algorithm does not perform particularly well on random graphs, but it is 
 very simple to implement and requires no additional parameters.
 
 
@@ -116,7 +201,7 @@ and $H(\mathcal{P}^i)$ is the entropy of the within-cluster movements
 including an extra word to designate that we are leaving the cluster.  
 $q$ is the probability that we switch between clusters at any given 
 step, while $p$ is the fraction of within-cluster movements that occur 
-in cluster $i$ plus the probability of exiting cluster i. Optimizing 
+in cluster $i$ plus the probability of exiting cluster $i$. Optimizing 
 this measure leads us to an optimal clustering. In practice this is done 
 by exploring the space of possible clusters using a breadth first search 
 and refining these results using simulated annealing.
@@ -125,42 +210,113 @@ This approach has several positive properties. It doesn't need
 parameters and is relatively fast with a complexity of $O(m)$ and in 
 \cite{lancichinetti2009} it is rated as one of the best performing 
 algorithms. However the implementation is relatively involved using 
-several different concepts stitched together.
+several different concepts stitched together. This algorithm is labeled 
+\emph{Infomod} when referenced later.
 % rosvall2008
 
-\subsection{Community maximization clustering}
-The ``Louvain Method'' as it is popularly called was introduced in 2008 
-by \cite{blondel2008} and made it possible to feasibly cluster more than 
-100 million nodes as compared to the few million nodes which had 
-formerly been possible with the fastest methods. The method is based on 
-the measure of modularity in a graph which measures the density of links 
-inside communities compared to the links between communities as a scalar 
-between $1$ and $-1$\cite{girvan2002}. For a weighted graph it is 
-defined as follows
-\begin{equation}
-	Q = \frac{1}{2m} \sum_{i,j} \lbrack A_{ij} - \frac{k_i k_j}{2m} 
-	\rbrack \delta(c_i, c_j)
-\end{equation}
-where $m=\frac{1}{2} \sum_{ij} A_{ij}$, $k_i = \sum_j A_{ij}$ and 
-$A_{ij}$ is the weight between the edge connecting $i$ and $j$. The 
-algorithm works by assigning each node to it's proper cluster and then 
-for each iteration reassign nodes to neighboring communities if it 
-increases the community measure. These iterations are carried out until 
-there are no reassignments in which case an initial clustering has been 
-reached. For graphs consisting of a large number of nodes, the algorithm 
-can now be repeated, treating each of the resulting clusters as a node 
-and repeating the same procedure.
+\subsection{The Louvain Method}
+The \emph{Louvain} Method was introduced in 2008 by \cite{blondel2008} 
+and made it possible to feasibly cluster more than 100 million nodes as 
+compared to the few million nodes which had formerly been possible with 
+the fastest methods. The method is based on the maximizing the 
+\emph{Modularity} of a graph iteratively. This is done efficiently 
+because the gain in modularity from moving a vertex $v_i$ to a community 
+$C$ can be calculated easily:
+\begin{multline}
+	\Delta Q = \left[ \frac{\sum_{in} + 2 k_{i,in}}{2m} - \
+	\left(\frac{\sum_{tot} + k_i}{2m} \right)^2 \right] \\
+	- \left[\frac{\sum_{in}}{2m} - \left(\frac{\sum_{tot}}{2m} \
+	\right)^2 - \left( \frac{k_i}{2m} \right)^2 \right]
+\end{multline}
+Here as in the definition of \emph{Modularity}, $m=\frac{1}{2} \sum_{ij} 
+A_{ij}$, $k_i = \sum_j A_{ij}$ and $k_{i,in}$ is the sum of weights of 
+the edges from $v_i$ to nodes in $C$.  $\sum_{in}$ is the sum of the 
+weights of the edges of $C$ while $\sum_{tot}$ is the sum of all edges 
+with at least one vertex in $C$.  The algorithm works by assigning each 
+node to it's proper cluster and then for each iteration reassign nodes 
+to neighboring communities if it increases the community measure.  These 
+iterations are carried out until there are no reassignments in which 
+case an initial clustering has been reached.  For graphs consisting of a 
+large number of nodes, the algorithm can now be repeated, treating each 
+of the resulting clusters as a node and repeating the same procedure.
 
-In terms of speed and simplicity the Louvain method is one of the best 
-methods available today. It has a computational complexity of TODO [add 
-complexity] and is very simple to implement. What's more, there is no 
-need to specify how many clusters we should receive and the individual 
-cluster sizes have shown to be sensible in real world trials. As for the 
+In terms of speed and simplicity the \emph{Louvain} method is one of the 
+best methods available today. It has a computational complexity of 
+$O(m)$ and is very simple to implement. What's more, there is no need to 
+specify how many clusters we should receive and the individual cluster 
+sizes have shown to be sensible in real world trials.  As for the 
 quality of the solution it compares favorably to other clustering 
-methods in a comparison in \cite{lancichinetti2009} only matched by the 
-so-called InfoMap algorithm proposed in \cite{rosvall2008} (described 
-above) and the algorithm proposed in \cite{ronhovde2009}.
+methods in the comparison on \emph{LFR} graphs made by 
+\cite{lancichinetti2009}.
 % blondel2008
 
-\subsection{Expectation minimization clustering}
+
+% \subsection{Expectation minimization clustering}
 % leicht2008
+% not suitable since it works in directed graphs
+\subsection{Potts Model Approach}
+Inspired by the \emph{Louvain} Method an algorithm based on Potts model 
+was introduced in 2009 by \cite{ronhovde2009}. Instead of working with 
+the community measure it is based on Potts Model Hamiltonian which is 
+defined as follows:
+\begin{equation}
+	\mathcal{H}(\{c\}) = \frac{1}{2} \sum_{i \neq j} (A_{ij} - \
+	\gamma \mathcal{1}_{\{A_{ij} = 0\}} \delta(c_i, c_j)
+\end{equation}
+$\delta(c_i, c_j)$ is the Kroneker Delta and is 1 only if the community 
+assignment of $v_i$, $c_i$ is equal to the community assignment of 
+$v_j$, $c_j$. $\gamma$ is a parameter specified before the algorithm is 
+run. As with the \emph{Louvain} method each node is assigned to its 
+proper cluster and then iteratively reassigned to neighboring clusters 
+based on the above measure. Different from the \emph{Louvain} method, 
+this assignment is done several times and the best cluster is picked 
+out.  Given to partitions $A$ and $B$ this is done with measures on the 
+entropy ($H(A)$ and $H(B)$), the mutual information ($I(A,B)$), the 
+normalized mutual information ($I_N(A,B)$) and the variation of 
+information ($V(A,B)$).  For the graph they are defined as follows:
+\begin{eqnarray}
+	H(A) & = & - \sum_{k=1}^{q_A} \frac{n_k}{n} log \frac{n_k}{N} \\
+	I(A,B) & = & \sum_{i=1}^{q_A} \sum_{j=1}^{q_B} \frac{n_{ij}}{N} \
+	log \frac{n_{ij}N}{v_i v_j} \\
+	I_N(A,B) & = & \frac{2I(A,B)}{H(A) + H(B)} \\
+	V(A,B) & = & H(A) + H(B) - 2I(A,B)
+\end{eqnarray}
+Here $q_A$ is the amount of clusters in $A$ where as $n$ is the total 
+amount of vertices and $n_k$ the total amount of vertices in cluster $k$ 
+of partition $A$. $n_{ij}$ is the amount of nodes shared by cluster $i$ 
+of partition $A$ and cluster $j$ of partition $B$. For each run, the 
+gamma parameter is adjusted and another clustering is calculated. Then 
+the best clustering is picked by looking at the regions of the graph 
+that are strongly correlated measured by high $I_N$ and low $V$.
+The algorithm performs well according to \cite{lancichinetti2009} and is 
+very fast with a complexity of $O(m^\beta log n)$, $\beta \approx 1.3$.  
+It is however complex to implement and requires that several model 
+parameters are supplied. In the following this algorithm is referred to 
+as \emph{Potts}.
+
+\subsection{An overview}
+
+\begin{table}
+	\small
+\begin{tabular}{l*{4}{c}}
+	Author(s) & Year & Label & Order \\
+	\hline
+	\noalign{\smallskip} 
+	Girvan and Newman & 2002 & \emph{GN} & $O(n^3)$ \\
+	Ng \& al. & 2002 & \emph{Spectral} & $O(n^3)$ \\
+	Rosvall and Bergstrom & 2008 & \emph{Infomap} & $O(m)$ \\
+	Blondel \& al. & 2008 & \emph{Louvain} & $O(m)$ \\
+	Ronhovede and Nussinov & 2009 & \emph{Potts} & $O(m^\beta log n)$ \\
+\end{tabular}
+\caption{Complexity Overview}
+\end{table}
+
+As seen in the complexity overview, the differences between the fastest 
+and slowest algorithms are vast. With more than a few thousand vertices, 
+calculating the spectral clustering or using the Girvan-Newman method 
+will be unfeasible on most hardware. The quality of each algorithm as 
+measured by benchmarking them on the \emph{LFR} graphs show that the 
+three best algorithms, \emph{Louvain}, \emph{Potts} and \emph{Infomap} 
+perform well on this type of random graphs, with \emph{Infomap} 
+performing better on larger graphs\footnote{A much more detailed 
+analysis of these results can be found in \cite{lancichinetti2009}}. 
